@@ -1,7 +1,9 @@
 AUX x2goserver.init 493 RMD160 5633609c39c43c7d810712cecb89cf947329862d SHA1 a6096f59d62f9be79250accddbc912d62b6226cd SHA256 b03cffd2c4eb539cc1904c42058d18f8b389cf7ed26ea4175ee0a136249c3feb
 DIST x2goserver_2.0.1-19_all.deb 14536 RMD160 9052af7fe76051d13dbda6b8ca4dd0192e88218a SHA1 5610b16b5529ea65bd19bfee7a7a9dfc8079b716 SHA256 513173c738dfa6a4e379ccb1a99eaff46803ad08a325073fbca8b76b6be76d56
 DIST x2goserver_3.0.0-1_all.deb 15000 RMD160 ce8d06fefa8426cedaf9ac64bc60af17de8cc905 SHA1 90b6377d8e02f66bc396a4279c32f3d25266088f SHA256 99b5bd556f2cdb9bb399b9c35efa4b8406f23a8ea766d84a060a0e1671c468ba
+DIST x2goserver_3.0.1-1.tar.gz 21151 RMD160 d01bc4245dc8242f0afd9f4c9143931514adc1c8 SHA1 771aa9d81f6205cdd302ec9fb0a5d7134656000b SHA256 636cbe6bfa72de020255ccaca86ade3a8ffeb369fc5b51a589bb4d3c3279b61d
 EBUILD x2goserver-2.0.1.19.ebuild 1723 RMD160 b8bce1018b13defa02c67ecb66ce22a3cdcd9fee SHA1 26ce63cf85bd8dbfb3c02dd18534e86e8a75d58f SHA256 d10ddef4322cf7894abb98ec8b314e31c56b3ea03fb03bf3e842f1050d813e23
 EBUILD x2goserver-3.0.0.1.ebuild 1907 RMD160 c9af82dee9fcaafdd2cb4dfd9d2b0da8dbac500a SHA1 6ba6ba32c83f5dd91b690b23358a1fda420f29e2 SHA256 56d0f6abe3e26f3b1b1e8aeff94ade69109a348f893d4cf803a0db236b5d45a9
-MISC ChangeLog 684 RMD160 0863db42b5601dad9309026596c8351a309bd42b SHA1 ddaef3fa042f5c58e96ed27215b0455bffe2d44e SHA256 ec7c27a24e2a69ee4e492a62de3578f76ec7521286804c420cbc2aecceade238
+EBUILD x2goserver-3.0.1.1.ebuild 3142 RMD160 bb5e291b6eed36b4b891480410c21c5d564e9626 SHA1 7519128bb37a0afadd1be2fbd17082676668999b SHA256 477780e9d3a71cf597766ce56c5b310db12e3989b6f589c707e90836eb2b082d
+MISC ChangeLog 940 RMD160 222ce9374438f397398e15a3779d395d84a0b5a8 SHA1 a76894cac93fb7ed9fc22609d8c71d014c0581ce SHA256 496ee609b90614440335bab159657ae9930dcdb009284dee629d253c3441e602
 MISC metadata.xml 307 RMD160 0172cd4fc792a41fde528ec788ab0dd98f3d21bc SHA1 953412d99904e25f4845fdfda587298e7cbc7f2a SHA256 b19b0330b6614bc27421032b94f6ade24661e38c818140c598d50cb91e82bce6
